--- a/modules/Storefront/Resources/assets/public/sass/layouts/header/_header-search.scss
+++ b/modules/Storefront/Resources/assets/public/sass/layouts/header/_header-search.scss
@@ -227,6 +227,7 @@
 @media screen and (max-width: 991px) {
     .header-search-wrap-parent {
         flex-grow: unset;
+        flex-shrink: 0;
         margin-left: auto;
         padding: 0;
         position: static;
@@ -236,10 +237,12 @@
         position: static;
         display: flex;
         flex-grow: 0;
-        margin: 0 -10px 0 auto;
-        padding: 0 15px;
+        margin: 0;
+        padding: 0;
         align-items: center;
-        height: 100%;
+        justify-content: center;
+        height: 44px;
+        width: 44px;
         min-width: 44px;
     }
 
